{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 10,
  "lineage": "4d369a22-7122-ecae-abe5-6eaa61f71e1a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fortisandbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1cc2987bf591a2b",
            "arn": "arn:aws:ec2:us-west-1:905418011892:instance/i-01efe27b3f6c13f9a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 240,
                "throughput": 0,
                "volume_id": "vol-0f56bda8e892f88ec",
                "volume_size": 80,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01efe27b3f6c13f9a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "fsb-access-key-west1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c6ea2e8375f95661",
            "private_dns": "ip-10-0-1-215.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.215",
            "public_ip": "204.236.150.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01a748502f85d2c8b",
                "volume_size": 1,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026efec11fd498979",
            "tags": {
              "Name": "FortiSandbox"
            },
            "tags_all": {
              "Name": "FortiSandbox"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6b041b010a66af6"
            ]
          },
          "dependencies": [
            "aws_security_group.fortisandbox_sg",
            "aws_subnet.fortisandbox_subnet",
            "aws_vpc.fortisandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fortisandbox_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:905418011892:internet-gateway/igw-0c8c13ea7b6600696",
            "id": "igw-0c8c13ea7b6600696",
            "owner_id": "905418011892",
            "tags": {
              "Name": "FortiSandboxIGW"
            },
            "tags_all": {
              "Name": "FortiSandboxIGW"
            },
            "vpc_id": "vpc-01031c57c7edc5cfe"
          },
          "dependencies": [
            "aws_vpc.fortisandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fortisandbox_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:905418011892:route-table/rtb-0dced42d5e78040a7",
            "id": "rtb-0dced42d5e78040a7",
            "owner_id": "905418011892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c8c13ea7b6600696",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "FortiSandboxRouteTable"
            },
            "tags_all": {
              "Name": "FortiSandboxRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-01031c57c7edc5cfe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fortisandbox_igw",
            "aws_vpc.fortisandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fortisandbox_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ff39b4b826eb7e4",
            "route_table_id": "rtb-0dced42d5e78040a7",
            "subnet_id": "subnet-026efec11fd498979"
          },
          "dependencies": [
            "aws_internet_gateway.fortisandbox_igw",
            "aws_route_table.fortisandbox_rt",
            "aws_subnet.fortisandbox_subnet",
            "aws_vpc.fortisandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fortisandbox_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:905418011892:security-group/sg-0a6b041b010a66af6",
            "description": "Allow necessary traffic to FortiSandbox",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6b041b010a66af6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "fortisandbox_sg",
            "name_prefix": "",
            "owner_id": "905418011892",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "FortiSandboxSG"
            },
            "tags_all": {
              "Name": "FortiSandboxSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01031c57c7edc5cfe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fortisandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fortisandbox_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:905418011892:subnet/subnet-026efec11fd498979",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026efec11fd498979",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418011892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FortiSandboxSubnet"
            },
            "tags_all": {
              "Name": "FortiSandboxSubnet"
            },
            "vpc_id": "vpc-01031c57c7edc5cfe"
          },
          "dependencies": [
            "aws_vpc.fortisandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fortisandbox_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:905418011892:vpc/vpc-01031c57c7edc5cfe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-020cdfa9a7978c59f",
            "default_route_table_id": "rtb-082cc0c42f38b366d",
            "default_security_group_id": "sg-02ebb16d5e937b992",
            "dhcp_options_id": "dopt-0e39f43a54f50bc88",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01031c57c7edc5cfe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082cc0c42f38b366d",
            "owner_id": "905418011892",
            "tags": {
              "Name": "FortiSandboxVPC"
            },
            "tags_all": {
              "Name": "FortiSandboxVPC"
            }
          }
        }
      ]
    }
  ]
}